<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">
        </android.support.v7.widget.Toolbar>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp"

            >

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:orientation="horizontal">



                <ImageView
                    android:id="@+id/image1"

                    android:layout_marginLeft="4dp"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:onClick="imageClick"
                    android:visibility="gone"
                    />
                <ImageView
                    android:id="@+id/image2"

                    android:layout_marginLeft="4dp"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:onClick="imageClick"
                    android:visibility="gone"
                    />
                <ImageView
                    android:id="@+id/image3"

                    android:layout_marginLeft="4dp"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:onClick="imageClick"
                    android:visibility="gone"
                    />
                <ImageView
                    android:id="@+id/image4"

                    android:layout_marginLeft="4dp"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:onClick="imageClick"
                    android:visibility="gone"/>
                <ImageView
                    android:id="@+id/image5"

                    android:layout_marginLeft="4dp"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:onClick="imageClick"
                    android:visibility="gone"/>
                <ImageView
                    android:id="@+id/image6"

                    android:layout_marginLeft="4dp"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:onClick="imageClick"
                    android:visibility="gone"
                    />
                <ImageView
                    android:id="@+id/image7"

                    android:layout_marginLeft="4dp"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:onClick="imageClick"
                    android:visibility="gone"
                    />
                <ImageView
                    android:id="@+id/image8"

                    android:layout_marginLeft="4dp"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:onClick="imageClick"
                    android:visibility="gone"
                    />




            </LinearLayout>

        </HorizontalScrollView>

        <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/title"
                  android:layout_marginTop="8dp"

            />

        <TextView android:id="@+id/title"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:layout_marginBottom="8dp"
                      android:textSize="16sp"
                       />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginTop="8dp"

            />
            <TextView android:id="@+id/price"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:layout_marginBottom="8dp"
                      android:textSize="20sp"
                      />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="8dp"

            />

            <TextView android:id="@+id/description"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:maxLines="20"
                      android:layout_marginTop="8dp"
                      android:layout_marginBottom="8dp"
                      android:textSize="16sp"
                />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/name"
            android:textSize="16sp"
            android:gravity="center_horizontal"
                       />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/delete"
            android:visibility="gone"

            android:background="@drawable/roundedcorners"
            />


    </LinearLayout>

</ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:src="@drawable/ic_phone_in_talk_black_48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        />

</RelativeLayout>